--- a/winAPI.vcxproj.filters
+++ b/winAPI.vcxproj.filters
@@ -159,6 +159,9 @@
     <ClInclude Include="database.h">
       <Filter>MainGame\database</Filter>
     </ClInclude>
+    <ClInclude Include="sceneEffect.h">
+      <Filter>MainGame</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -244,6 +247,9 @@
     </ClCompile>
     <ClCompile Include="database.cpp">
       <Filter>MainGame\database</Filter>
+    </ClCompile>
+    <ClCompile Include="sceneEffect.cpp">
+      <Filter>MainGame</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
