--- a/winAPI.vcxproj.filters
+++ b/winAPI.vcxproj.filters
@@ -171,6 +171,9 @@
     <ClInclude Include="stage1.h">
       <Filter>MainGame\Scene</Filter>
     </ClInclude>
+    <ClInclude Include="statusScene.h">
+      <Filter>MainGame\Scene</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -264,6 +267,9 @@
       <Filter>MainGame\Enemy</Filter>
     </ClCompile>
     <ClCompile Include="stage1.cpp">
+      <Filter>MainGame\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="statusScene.cpp">
       <Filter>MainGame\Scene</Filter>
     </ClCompile>
   </ItemGroup>
