--- a/winAPI.vcxproj.filters
+++ b/winAPI.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClInclude Include="statusScene.h">
       <Filter>MainGame\Scene</Filter>
     </ClInclude>
+    <ClInclude Include="minimapScene.h">
+      <Filter>MainGame\Scene</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -270,6 +273,9 @@
       <Filter>MainGame\Scene</Filter>
     </ClCompile>
     <ClCompile Include="statusScene.cpp">
+      <Filter>MainGame\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="minimapScene.cpp">
       <Filter>MainGame\Scene</Filter>
     </ClCompile>
   </ItemGroup>
